# discounting-system

./: .gitignore  Readme.md  pyproject.toml  pytest.ini
src/: main.py
src/core/: config.py  database.py  events.py  exceptions.py
src/interfaces/facades/: __init__.py  cart_facade.py  coupon_facade.py  rules_facade.py
src/modules/cart/: __init__.py  deps.py  models.py  repository.py  routes.py  service.py
src/modules/checkout/: __init__.py  deps.py  models.py  repository.py  routes.py  service.py
src/modules/coupon/: __init__.py  analytics.py  cleanup.py  deps.py  models.py  repository.py  routes.py  service.py
src/modules/rules/: __init__.py  deps.py  engine.py  models.py  repository.py  routes.py
tests/: conftest.py  test_coupon_analytics.py  test_rule_engine.py
